# parsec

./: CMakeLists.txt  NEWS
cmake_modules/: CheckAtomicIntrinsic.cmake  PaRSECConfig.cmake.in
contrib/build_with_parsec/: dtd_test_allreduce.c  write_check.jdf
dplasma/: CMakeLists.txt
dplasma/examples/: dqr_driver.c
dplasma/lib/: zhetrf_wrapper.c  zpltmg_wrapper.c  zpoinv_wrapper.c  zpotrf_wrapper.c
dplasma/testing/: common.c  testing_zgeadd.c  testing_zgemm.c  testing_zgemm_dtd.c  testing_zgeqrf_rd.c  testing_zgetrf_qrf.c  testing_zhemm.c  testing_zher2k.c  testing_zherk.c  testing_zsymm.c  testing_zsyr2k.c  testing_zsyrk.c  testing_ztrmm.c
examples/: Ex00_StartStop.c  Ex01_HelloWorld.jdf  Ex02_Chain.jdf  Ex03_ChainMPI.jdf  Ex04_ChainData.jdf  Ex05_Broadcast.jdf  Ex06_RAW.jdf  Ex07_RAW_CTL.jdf
examples/interfaces/superscalar/: dtd_example_hello_arg.c  dtd_example_hello_world.c  dtd_example_hello_world_untied.c
parsec/: CMakeLists.txt  arena.c  datarepo.c  datarepo.h  datatype.c  datatype.h  datatype_mpi.c  debug_marks.c  debug_marks.h  dictionary.c  mempool.h  parsec.c  parsec_comm_engine.c  parsec_comm_engine.h  parsec_comm_stats.h  parsec_internal.h  parsec_lci.c  parsec_lci.h  parsec_mpi_funnelled.c  parsec_mpi_funnelled.h  parsec_prof_grapher.c  parsec_remote_dep.c  parsec_remote_dep.h  parsec_stats.c  parsec_stats.h  parsec_stats_graph.c  profiling.c  profiling.h  profiling_otf2.c  recursive.h  remote_dep.c  remote_dep.h  remote_dep_mpi.c  runtime.h  scheduling.c  vpmap.c
parsec/class/: lifo.h
parsec/data_dist/matrix/: CMakeLists.txt  map_operator.c  matrixtypes.c  scalapack_convert.c  scalapack_convert.h  subtile.c  subtile.h  sym_two_dim_rectangle_cyclic.c  sym_two_dim_rectangle_cyclic.h  two_dim_rectangle_cyclic.c  vector_two_dim_cyclic.c
parsec/datatype/: CMakeLists.txt  datatype.c  datatype_opal.c  opal_convertor.c  opal_convertor.h  opal_convertor_internal.h  opal_convertor_raw.c  opal_copy_functions.c  opal_datatype_checksum.h  opal_datatype_clone.c  opal_datatype_copy.h  opal_datatype_cuda.c  opal_datatype_destroy.c  opal_datatype_get_count.c  opal_datatype_memcpy.h  opal_datatype_module.c  opal_datatype_pack.h  opal_datatype_position.c  opal_datatype_prototypes.h  opal_datatype_resize.c  opal_datatype_unpack.c  opal_datatype_unpack.h  parsec_convertor.c  parsec_convertor.h  parsec_convertor_internal.h  parsec_convertor_raw.c  parsec_copy_functions.c  parsec_copy_functions_heterogeneous.c  parsec_datatype.h  parsec_datatype_add.c  parsec_datatype_checksum.h  parsec_datatype_clone.c  parsec_datatype_config.h.in  parsec_datatype_copy.c  parsec_datatype_copy.h  parsec_datatype_create.c  parsec_datatype_create_contiguous.c  parsec_datatype_cuda.h  parsec_datatype_destroy.c  parsec_datatype_dump.c  (+14 more)
parsec/datatype/cmake_modules/: CheckTypeSizeAlignment.c.in  CheckTypeSizeAlignment.cmake  MinMaxOption.cmake
parsec/datatype/util/: CMakeLists.txt  arch.c  arch.h  crc.c  crc.h
parsec/fortran/: CMakeLists.txt
parsec/include/: parsec.h
parsec/include/parsec/: execution_stream.h  parsec_config_bottom.h  parsec_options.h.in
parsec/include/parsec/sys/: atomic.h
parsec/interfaces/: interface.c
parsec/interfaces/ptg/ptg-compiler/: jdf2c.c
parsec/interfaces/superscalar/: insert_function.c  overlap_strategies.c  parsec_dtd_data_flush.c
parsec/mca/device/cuda/: device_cuda_module.c  transfer.c
parsec/mca/pins/: pins_init.c
parsec/mca/pins/sched_profiler/: pins_sched_profiler.h  pins_sched_profiler_component.c  pins_sched_profiler_module.c
parsec/mca/sched/ap/: sched_ap_component.c  sched_ap_module.c
parsec/mca/sched/gd/: sched_gd_module.c
parsec/mca/sched/ip/: sched_ip_component.c  sched_ip_module.c
parsec/mca/sched/lfq/: sched_lfq_module.c
parsec/mca/sched/lhq/: sched_lhq_module.c
parsec/mca/sched/ll/: sched_ll_module.c
parsec/mca/sched/llp/: sched_llp_module.c
parsec/mca/sched/ltq/: sched_ltq_module.c
parsec/mca/sched/pbq/: sched_pbq_module.c
parsec/mca/sched/rnd/: sched_rnd_component.c  sched_rnd_module.c
parsec/mca/sched/spq/: sched_spq_component.c  sched_spq_module.c
tests/: CMakeLists.txt  complex_deps.jdf  compose.c  dtt_bug_replicator_ex.c  multichain.jdf  operator.c  reduce.c  startup.jdf  strange.jdf  touch_ex.c  write_check.jdf
tests/all2all/: a2a.jdf  main.c
tests/branching/: branching_wrapper.c  main.c
tests/choice/: choice_wrapper.c  main.c
tests/controlgather/: ctlgat.jdf  ctlgat_wrapper.c  main.c
tests/generalized_reduction/: BT_reduction_wrapper.c  main.c
tests/haar-tree-project/: main.c
tests/interfaces/ptg/compiler_checks/: CMakeLists.txt  forward_READ_NULL.jdf  forward_RW_NULL.jdf  write_check.jdf
tests/interfaces/ptg/local-indices/: local_indices.jdf
tests/interfaces/ptg/profiling/: async.jdf
tests/interfaces/ptg/user-defined-functions/: main.c
tests/interfaces/superscalar/: CMakeLists.txt  common_timing.h  dtd_test_allreduce.c  dtd_test_broadcast.c  dtd_test_data_flush.c  dtd_test_explicit_task_creation.c  dtd_test_flag_dont_track.c  dtd_test_global_id_for_dc_assumed.c  dtd_test_hierarchy.c  dtd_test_insert_task_interface.c  dtd_test_multiple_handle_wait.c  dtd_test_null_as_tile.c  dtd_test_pingpong.c  dtd_test_reduce.c  dtd_test_task_generation.c  dtd_test_task_inserting_task.c  dtd_test_task_insertion.c  dtd_test_task_placement.c  dtd_test_template_counter.c  dtd_test_tp_enqueue_dequeue.c  dtd_test_untie.c  dtd_test_war.c  test_ce.c
tests/merge_sort/: main.c  merge_sort_wrapper.c
tests/pingpong/: CMakeLists.txt  bandwidth.jdf  bandwidth_overlap.jdf  bcast.jdf  bcast_bug.jdf  main.c  rtt.jdf  rtt_wrapper.c
tests/scheduling/: ep_wrapper.c  main.c
tests/standalone-profiling/: sp-demo.c  sp-perf.c
tests/stencil/: stencil_internal.c  stencil_internal.h  testing_stencil_1D.c
tests/two_dim_band/: main.c
tests/unit/: lifo.c  list.c
tools/profiling/: CMakeLists.txt  dbpreader.c
tools/profiling/python/: parsec_trace_tables.py  pbt2ptt.pyx  setup.py.in
tools/profiling/python/examples/: parsec_stats_graph.py
